2006-08-02  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "HOME: Discard layout -confirmation note shown even though
    there wasn't any changes" (Closes NB#27713)
	* hildon-home/layout-manager.c:
	  - add gboolean value to save any changes made on layoutmode,
	  - button and area clicks closes also layout mode begin animation banner,

2006-08-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-keys.c: Change gconf keys as agreed with
	  HW keyboard applet

2006-08-02  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: Fixed the second line of folders
	  to comply with fixed UI specs
	* hildon-navigator/hildon-navigator.pc.in: Added variable to get
	  the .desktop directory

2006-07-31  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.16

2006-07-31  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "If the Applications switcher menu is already, the menu is
	closed after short press home (sawp) hey." (Closes NB#36263)
	* hildon-navigator/hn-app-switcher.c: Pop-down the AS menu on a second
	  short press on HOME

2006-07-28  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-button.h: thumb button is 8, not 4

2006-07-28  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Couldn't type 'apostrophe' where 'adiaeresis' assigned as
	shortcut." (Closes NB#35553)
	* hildon-navogator/hn-keys.[ch]:
	  - Keep a pointer to the KeyCode, in case the KeySyms changed when
	    removing a shortcut
	  - Added callback to reload all the key bindings
	* hildon-navogator/hn-wm.c: Track changes in the keymap, and reload
	  the key shortcuts when detected.

2006-07-28  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.h: Changed path for
	  status bar HildonLog
	* hildon-status-bar/hildon-status-bar-main.c: Deletion of HildonLog
	  file unconditionally

2006-07-27  Johan Bilien <johan.bilien@nokia.com>
